orchestertorworker pattern added

--- a/src/ui/uiconfigfile.ini
+++ b/src/ui/uiconfigfile.ini
@@ -1,4 +1,4 @@
 [DEFAULT]
 PAGE_TITLE = LANGGRAPH PATTERNS
-USECASE = PROMPT CHAIN, ROUTER
-GROQ_MODEL_NAME = qwen/qwen3-32b
+USECASE = PROMPT CHAIN, ROUTER, ORCHESTRATOR-WORKER
+GROQ_MODEL_NAME = qwen/qwen3-32b, groq/compound
